package services;

public class TragamonedasImpl {
}
